8345127: Add --sun-misc-unsafe-memory-access=allow when running tests until JDK-8334137 is fixed