@@ -342,6 +342,9 @@ ext.MAVEN_GROUP_ID = "org.openjfx"
 ext.enableNativeGraphics='--enable-native-access=javafx.graphics'
 ext.enableNativeAll='--enable-native-access=javafx.graphics,javafx.media,javafx.web'
 
+// FIXME: Remove this when JDK-8334137 is fixed
+ext.allowSunMiscUnsafe = '--sun-misc-unsafe-memory-access=allow'
+
 // Verify that the architecture & OS are supported configurations. Note that
 // at present building on PI is not supported, but we would only need to make
 // some changes on assumptions on what should be built (like SWT / Swing) and
@@ -764,6 +767,7 @@ try (BufferedReader inStream = new java.io.BufferedReader(new java.io.InputStrea
             // should the need arise.
 //            ext.jdk18OrLater = jdkVersionInfo.feature() >= 18
 
+            ext.jdk23OrLater = jdkVersionInfo.feature() >= 23
             ext.jdk24OrLater = jdkVersionInfo.feature() >= 24
         }
     }
@@ -1183,6 +1187,11 @@ void writeArgsFile(boolean isCompile, File dest, List<String> libpath, List<Stri
         if (!isCompile) {
             dest << enableNativeAll
             dest << "\n"
+            // FIXME: Remove this when JDK-8334137 is fixed
+            if (jdk23OrLater) {
+                dest << allowSunMiscUnsafe
+                dest << "\n"
+            }
         }
     }
 }
@@ -2680,6 +2689,10 @@ project(":graphics") {
     test {
         def cssDir = file("${TEST_SDK_PATH}/shims/${moduleName}/javafx")
         jvmArgs enableNativeGraphics
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk23OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
         enableAssertions = true
@@ -2769,6 +2782,10 @@ project(":controls") {
     test {
         def cssDir = file("${TEST_SDK_PATH}/shims/${moduleName}/javafx")
         jvmArgs enableNativeGraphics
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk23OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit",
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
     }
@@ -2862,6 +2879,11 @@ project(":swing") {
         enabled = IS_FULL_TEST && IS_AWT_TEST
 
         jvmArgs enableNativeGraphics
+
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk23OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
     }
 
     if (COMPILE_SWING) {
@@ -2929,6 +2951,11 @@ project(":swt") {
 
         jvmArgs enableNativeGraphics
 
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk23OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
+
         if (IS_MAC) {
             enabled = false
             logger.info("SWT tests are disabled on MAC, because Gradle test runner does not handle -XstartOnFirstThread properly (https://issues.gradle.org/browse/GRADLE-3290).")
@@ -2978,6 +3005,10 @@ project(":fxml") {
         // tracker and this attempts to fire up the toolkit and this looks for native libraries and fails,
         // we have to use the stub toolkit for now.
         jvmArgs enableNativeGraphics
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk23OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
         jvmArgs "-Djavafx.toolkit=test.com.sun.javafx.pgstub.StubToolkit"
         // FIXME: change this to also allow JDK 9 boot jdk
         classpath += files("$JDK_HOME/jre/lib/ext/nashorn.jar")
@@ -3720,6 +3751,11 @@ project(":web") {
         // enable native access for all modules with native code
         jvmArgs enableNativeAll
 
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk23OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
+
         // Run web tests in headless mode
         systemProperty 'glass.platform', 'Monocle'
         systemProperty 'monocle.platform', 'Headless'
@@ -4092,6 +4128,11 @@ project(":systemTests") {
 
         // enable native access for all modules with native code
         jvmArgs enableNativeAll
+
+        // FIXME: Remove this when JDK-8334137 is fixed
+        if (jdk23OrLater) {
+            jvmArgs allowSunMiscUnsafe
+        }
 
         // Parse testPatchModuleArgs looking for "*module-path".
         // Save path if found so we can pass it to the module launcher tests
